--- a/Japan.html
+++ b/Japan.html
@@ -8,9 +8,9 @@
 
 <body style="background-color:#f9b245;">
   <h1>Japan Trip 2019</h1>
-  <img src="C:\Users\zhemi\OneDrive\Desktop\Others\Web Development\HTML Personal site\Images\DSC02023.jpg" alt="Kobe">
+  <img src="Images\DSC02023.jpg" alt="Kobe">
   <p>Kobe Port</p>
-  <img src="C:\Users\zhemi\OneDrive\Desktop\Others\Web Development\HTML Personal site\Images\DSC00581.jpg" alt="Akazaka">
+  <img src="Images\DSC00581.jpg" alt="Akazaka">
   <p>Somewhere in 赤坂</p>
   <hr>
   <h3><strong>Japan Itinerary</strong></h3>
