--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Zhe Ming こんにちは</title>
+  <title>Zhe Ming</title>
   <meta name="description" content="Random Stuff posted by me">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -11,7 +11,7 @@
 <body style="background-color:#bbb2e9;">
   <!--Change colour of background through html using colour hex codes-->
   <h1><em>Zhe Ming Pageへようこそ!</em>></h1>
-  <img src="Images/DSC01525.JPG" alt="Zhe Ming in Japan">
+  <img src="Images/DSC01525.jpg" alt="Zhe Ming in Japan">
   <!--Pictures can only be displayed if photo file is in the same file level, else, file directory must be included to locate the file-->
   <p><em><strong>Hello, just trying things out here!</strong></em></p>
   <p>Find me on <strong><a href="https://www.instagram.com/zhemxng/" target="_blank">Insta</a>!</strong></p>
