--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body style="background-color:#bbb2e9;">
   <!--Change colour of background through html using colour hex codes-->
-  <h1><em>Zhe Ming Pageへようこそ!</em>></h1>
+  <h1><em>Zhe Ming Pageへようこそ!</em></h1>
   <img src="Images/DSC01525.jpg" alt="Zhe Ming in Japan">
   <!--Pictures can only be displayed if photo file is in the same file level, else, file directory must be included to locate the file-->
   <p><em><strong>Hello, just trying things out here!</strong></em></p>
